@@ -1,6 +1,8 @@
 Revision history for DBIx::Class
 
     * Fixes
+        - Revert default selection to being lazy again (eagerness introduced
+          in 0.08126) - fixes DBIx::Class::Helper::ResultSet::RemoveColumns
         - Unaliased "dark" selectors no longer throw off prefetch
         - Fix proper composition of bind values across all possible
           SQL areas ( group_by => \[ ... ] now works properly )
